--- a/style.css
+++ b/style.css
@@ -32,21 +32,18 @@ body {
     width: 320px;
     height: 597px;
 }
-
-.navbar__link, .sub_menu_item {
+.container {
+    margin: 0;
+    max-width: 320px;
+}
+a {
     text-decoration: none;
     color: unset;
 }
-.navbar__list {
+ul {
     list-style: none;
     margin: 0;
     padding: 0;
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    align-content: center;
-    border: none;
 }
 .header {
     width: 100%;
@@ -59,10 +56,19 @@ button {
     background-color: transparent;
     padding: 0;
 }
-.sub-menu__item:hover {
+.sub_menu_item:hover {
     border: 2px solid #B8FFEC;
     border-radius: 6px;
     padding: 8px 17px 8px 17px;
+}
+.navbar_list{
+    width: 100%;
+    margin: 0;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    align-content: center;
+    border: none;
 }
 .navbar {
     position: relative;
@@ -76,10 +82,10 @@ button {
     position: absolute;
     top: 63px;
 }
-.logo-link {
+.logo_link {
     position: relative;
 }
-.sub-menu {
+.sub_menu {
     font-size: 16px;
     width: 100%;
     height: 57px;
@@ -90,10 +96,10 @@ button {
     margin-left: 33px;
     overflow: scroll;
 }
-.sub-menu::-webkit-scrollbar {
+.sub_menu::-webkit-scrollbar {
     width: 0;
 }
-.article__text-container {
+.text_container {
     width: 280px;
     height: 90px;
     margin: 16px;
@@ -101,10 +107,10 @@ button {
     overflow: hidden;
 
 }
-.article__text{
+p {
     font-size: 14px;
 }
-.article__text {
+.read_more{
     margin-left: 16px;
     margin-bottom: 16px;
     display: flex;
@@ -115,14 +121,14 @@ h1 {
     color: #1B1C21;
     font-size: 28px;
 }
-.sub-header {
+.decor {
     padding: 0;
     margin: 0;
     display: flex;
     gap: 12px;
     align-items: center;
 }
-.sub-menu__item {
+.sub_menu_item {
     white-space: nowrap;
 }
 main {
@@ -136,25 +142,29 @@ main {
         height: 504px;
         margin: 0;
     }
+    .container {
+        margin: 0;
+        max-width: 768px;
+    }
     .header {
         width: 768px;
         height: 88px;
         margin: 0;
     }
-    .divider{
+    .divider_class {
         position: relative;
         left: 210px;
     }
-    .repair-item {
+    .repair_item {
         position: relative;
         left: 134px;
 
     }
-    .check-status {
+    .check_status_item {
         position: relative;
         left: 54px;
     }
-    .divider::before {
+    .divider_class::before {
         width: 40px;
         height: 40px;
         top: -4px;
@@ -164,7 +174,7 @@ main {
         display: block;
         background-image: url("./assets/chat.svg");
     }
-    .divider::after {
+    .divider_class::after {
         width: 40px;
         height: 40px;
         top: -4px;
@@ -175,12 +185,12 @@ main {
         display: block;
         background-image: url("./assets/profile.svg");
     }
-    .logo-link {
+    .logo_link {
         margin-right: 60px;
         position: relative;
         left: -100px;
     }
-    .logo-link::after {
+    .logo_link::after {
         width: 40px;
         height: 40px;
         top: -29px;
@@ -191,11 +201,11 @@ main {
         display: block;
         background-image: url("./assets/call.svg");
     }
-    .navbar__button {
+    .all_menu {
         position: relative;
         left: -42px;
     }
-    .navbar__button::after {
+    .all_menu::after {
         content: '';
         display: block;
         width: 2px;
@@ -215,7 +225,7 @@ main {
         height: 208px;
         display: flex;
     }
-    .container-article {
+    .article_content {
         width: 312px;
         height: 208px;
         position: relative;
@@ -224,7 +234,7 @@ main {
         margin-right: 48px;
     }
 
-    .article__text-container {
+    .text_container {
         margin: 0;
         width: 312px;
         height: 153px;
@@ -235,11 +245,11 @@ main {
         height: 208px;
     }
 
-    .article__text {
+    .read_more {
         margin-left: 5px;
     }
 
-    }
+}
 @media (min-width: 1120px) {
     body {
         background-color: #F8F8F8;
@@ -247,23 +257,23 @@ main {
         height: 535px;
         margin: 0;
     }
-    .logo-link {
+    .logo_link {
         visibility: hidden;
     }
-    .navbar__button {
+    .all_menu {
         visibility: hidden;
     }
-    .divider {
+    .divider_class {
         visibility: hidden;
     }
     .navbar::after {
         visibility: hidden;
     }
-    .check-status {
+    .check_status_item {
         position: relative;
         left: 370px;
     }
-    .check-status::before {
+    .check_status_item::before {
         content: "Статус ремонта";
         font-size: 16px;
         font-weight: 500;
@@ -275,11 +285,11 @@ main {
 
 
     }
-    .repair-item {
+    .repair_item {
         position: relative;
         left: 300px;
     }
-    .repair-item::before {
+    .repair_item::before {
         content:"Оставить заявку";
         font-size: 16px;
         font-weight: 500;
@@ -289,21 +299,21 @@ main {
         left: -135px;
         top: -15px;
     }
-    .container-sub {
+    .container_sub {
         position: relative;
         top: -75px;
     }
-    .sub-menu {
+    .sub_menu {
         line-height: 10px;
         wrap-option: wrap;
         width: 1096px;
         height: 130px;
         flex-wrap: wrap;
     }
-    .sub-menu__item {
+    .sub_menu_item {
         margin-right: 18px;
     }
-    .article__text-container {
+    .text_container {
         width: 490px;
         height: 165px;
     }
@@ -318,5 +328,337 @@ main {
         top: -75px;
     }
 
+}@font-face {
+    font-family: 'TT Lakes';
+    src: url('./fonts/TTLakes-Regular.woff') format('woff');
+    font-weight: 300;
+    font-style: normal;
+    font-display: swap;
 }
+@font-face {
+    font-family: 'TT Lakes';
+    src: url('./fonts/TTLakes-Bold.woff') format('woff');
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+}
+@font-face {
+    font-family: 'TT Lakes';
+    src: url('./fonts/TTLakes-Medium.woff') format('woff');
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+}
+html {
+    box-sizing: border-box;
+}
+*,*::after,*::before {
+    box-sizing: inherit;
+}
+body {
+    margin: 0;
+    font-family: 'TT Lakes', sans-serif;
+    font-weight: 300;
+    width: 320px;
+    height: 597px;
+}
+.container {
+    margin: 0;
+    max-width: 320px;
+}
+a {
+    text-decoration: none;
+    color: unset;
+}
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+.header {
+    width: 100%;
+    height: 88px;
+    margin: 0;
+    padding: 24px 16px 24px 16px;
+}
+button {
+    border-color: transparent;
+    background-color: transparent;
+    padding: 0;
+}
+.sub_menu_item:hover {
+    border: 2px solid #B8FFEC;
+    border-radius: 6px;
+    padding: 8px 17px 8px 17px;
+}
+.navbar_list{
+    width: 100%;
+    margin: 0;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    align-content: center;
+    border: none;
+}
+.navbar {
+    position: relative;
+}
+.navbar::after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 1px;
+    background-color: #D9FFF5;
+    position: absolute;
+    top: 63px;
+}
+.logo_link {
+    position: relative;
+}
+.sub_menu {
+    font-size: 16px;
+    width: 100%;
+    height: 57px;
+    display: flex;
+    gap: 16px;
+    color: #7E7E82;
+    align-items: center;
+    margin-left: 33px;
+    overflow: scroll;
+}
+.sub_menu::-webkit-scrollbar {
+    width: 0;
+}
+.text_container {
+    width: 280px;
+    height: 90px;
+    margin: 16px;
+    line-height: 18px;
+    overflow: hidden;
 
+}
+p {
+    font-size: 14px;
+}
+.read_more{
+    margin-left: 16px;
+    margin-bottom: 16px;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+h1 {
+    color: #1B1C21;
+    font-size: 28px;
+}
+.decor {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    gap: 12px;
+    align-items: center;
+}
+.sub_menu_item {
+    white-space: nowrap;
+}
+main {
+    width: 100%;
+    height: 509px;
+    background-color: #F8F8F8;
+}
+@media (min-width: 784px) {
+    body {
+        width: 784px;
+        height: 504px;
+        margin: 0;
+    }
+    .container {
+        margin: 0;
+        max-width: 768px;
+    }
+    .header {
+        width: 768px;
+        height: 88px;
+        margin: 0;
+    }
+    .divider_class {
+        position: relative;
+        left: 210px;
+    }
+    .repair_item {
+        position: relative;
+        left: 134px;
+
+    }
+    .check_status_item {
+        position: relative;
+        left: 54px;
+    }
+    .divider_class::before {
+        width: 40px;
+        height: 40px;
+        top: -4px;
+        left: -110px;
+        position: absolute;
+        content: '';
+        display: block;
+        background-image: url("./assets/chat.svg");
+    }
+    .divider_class::after {
+        width: 40px;
+        height: 40px;
+        top: -4px;
+        left: -60px;
+        margin-left: 5px;
+        position: absolute;
+        content: '';
+        display: block;
+        background-image: url("./assets/profile.svg");
+    }
+    .logo_link {
+        margin-right: 60px;
+        position: relative;
+        left: -100px;
+    }
+    .logo_link::after {
+        width: 40px;
+        height: 40px;
+        top: -29px;
+        right: -335px;
+        margin-left: 5px;
+        position: absolute;
+        content: '';
+        display: block;
+        background-image: url("./assets/call.svg");
+    }
+    .all_menu {
+        position: relative;
+        left: -42px;
+    }
+    .all_menu::after {
+        content: '';
+        display: block;
+        width: 2px;
+        height: 32px;
+        background-color: #EAEAEA;
+        position: absolute;
+        border-radius: 1px;
+        right: -20px;
+        top: 4px;
+    }
+    main {
+        width: 769px;
+        height: 416px;
+    }
+    .article {
+        width: 720px;
+        height: 208px;
+        display: flex;
+    }
+    .article_content {
+        width: 312px;
+        height: 208px;
+        position: relative;
+        top: -14px;
+        margin-left: 24px;
+        margin-right: 48px;
+    }
+
+    .text_container {
+        margin: 0;
+        width: 312px;
+        height: 153px;
+        line-height: 20px;
+    }
+    .main_image {
+        width: 360px;
+        height: 208px;
+    }
+
+    .read_more {
+        margin-left: 5px;
+    }
+
+}
+@media (min-width: 1120px) {
+    body {
+        background-color: #F8F8F8;
+        width: 1120px;
+        height: 535px;
+        margin: 0;
+    }
+    .logo_link {
+        visibility: hidden;
+    }
+    .all_menu {
+        visibility: hidden;
+    }
+    .divider_class {
+        visibility: hidden;
+    }
+    .navbar::after {
+        visibility: hidden;
+    }
+    .check_status_item {
+        position: relative;
+        left: 370px;
+    }
+    .check_status_item::before {
+        content: "Статус ремонта";
+        font-size: 16px;
+        font-weight: 500;
+        position: absolute;
+        width: 125px;
+        height: 24px;
+        top: -14px;
+        right: 45px;
+
+
+    }
+    .repair_item {
+        position: relative;
+        left: 300px;
+    }
+    .repair_item::before {
+        content:"Оставить заявку";
+        font-size: 16px;
+        font-weight: 500;
+        position: absolute;
+        width: 130px;
+        height: 24px;
+        left: -135px;
+        top: -15px;
+    }
+    .container_sub {
+        position: relative;
+        top: -75px;
+    }
+    .sub_menu {
+        line-height: 10px;
+        wrap-option: wrap;
+        width: 1096px;
+        height: 130px;
+        flex-wrap: wrap;
+    }
+    .sub_menu_item {
+        margin-right: 18px;
+    }
+    .text_container {
+        width: 490px;
+        height: 165px;
+    }
+    .main_image {
+        position: relative;
+        width: 532px;
+        height: 307px;
+        right: -155px;
+    }
+    .article {
+        position: relative;
+        top: -75px;
+    }
+    .read_more {
+        margin-top: 5px;
+    }
+
+}
