--- a/style.css
+++ b/style.css
@@ -29,8 +29,6 @@ body {
     margin: 0;
     font-family: 'TT Lakes', sans-serif;
     font-weight: 300;
-    width: 320px;
-    height: 597px;
 }
 .container {
     margin: 0;
@@ -92,7 +90,7 @@ button {
 }
 .sub_menu {
     font-size: 16px;
-    width: 95.3125%;
+    width: 305px;
     height: 57px;
     display: flex;
     color: #7E7E82;
@@ -138,10 +136,10 @@ h1 {
 }
 main {
     width: 100%;
-    height: 509px;
+    height: 100%;
     background-color: #F8F8F8;
 }
-/*ПЛАНШЕТ*/
+/*!*ПЛАНШЕТ*!*/
 @media (min-width: 768px) {
     body {
         width: 100vh;
@@ -223,8 +221,8 @@ main {
         top: 4px;
     }
     main {
-        width: 769px;
-        height: 416px;
+        width: 100%;
+        height: 100%;
     }
     .article {
         width: 720px;
@@ -254,6 +252,9 @@ main {
     .read_more {
         margin-left: 5px;
     }
+    .sub_menu {
+        width: 753px;
+    }
 
 }
 @media (min-width: 1120px) {
@@ -262,9 +263,6 @@ main {
         width: 100%;
         height: 100%;
         margin: 0;
-    }
-    main {
-        background-color: #F8F8F8;
     }
     .logo_link {
         visibility: hidden;
@@ -313,9 +311,9 @@ main {
         top: -75px;
     }
     .sub_menu {
+        width: 1105px;
         line-height: 10px;
         wrap-option: wrap;
-        width: 1096px;
         height: 130px;
         flex-wrap: wrap;
     }
